# third_party_noto-cjk

./: .gitattributes  BUILD.gn  NotoSansCJK-Black.ttc  NotoSansCJK-Bold.ttc  NotoSansCJK-DemiLight.ttc  NotoSansCJK-Light.ttc  NotoSansCJK-Medium.ttc  NotoSansCJK-Regular.ttc  NotoSansCJK-Thin.ttc  NotoSerifCJK-Black.ttc  NotoSerifCJK-Bold.ttc  NotoSerifCJK-ExtraLight.ttc  NotoSerifCJK-Light.ttc  NotoSerifCJK-Medium.ttc  NotoSerifCJK-Regular.ttc  NotoSerifCJK-SemiBold.ttc  OAT.xml  README.OpenSource  README.en.md  README.md  bundle.json  fonts_config.gni
Sans/OTC/: NotoSansCJK-Black.ttc  NotoSansCJK-Bold.ttc  NotoSansCJK-DemiLight.ttc  NotoSansCJK-Light.ttc  NotoSansCJK-Medium.ttc  NotoSansCJK-Regular.ttc  NotoSansCJK-Thin.ttc
Sans/Variable/OTC/: NotoSansCJK-VF.otf.ttc  NotoSansCJK-VF.ttc  NotoSansCJK-VF.ttf.ttc  NotoSansMonoCJK-VF.otf.ttc  NotoSansMonoCJK-VF.ttf.ttc  NotoSansMonoCJK.ttc
Serif/: NotoSerifCJK-Black.ttc  NotoSerifCJK-ExtraLight.ttc  NotoSerifCJK-Light.ttc  NotoSerifCJK-Medium.ttc  NotoSerifCJK-SemiBold.ttc
Serif/OTC/: NotoSerifCJK-Black.ttc  NotoSerifCJK-Bold.ttc  NotoSerifCJK-ExtraLight.ttc  NotoSerifCJK-Light.ttc  NotoSerifCJK-Medium.ttc  NotoSerifCJK-Regular.ttc  NotoSerifCJK-SemiBold.ttc
Serif/Variable/OTC/: NotoSerifCJK-VF.otf.ttc  NotoSerifCJK-VF.ttf.ttc
