#Copyright (c) 2024 Huawei Device Co., Ltd.
#Licensed under the Apache License, Version 2.0 (the "License");
#you may not use this file except in compliance with the License.
#You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
#Unless required by applicable law or agreed to in writing, software
#distributed under the License is distributed on an "AS IS" BASIS,
#WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#See the License for the specific language governing permissions and
#limitations under the License.

import("//build/ohos.gni")

ohos_prebuilt_etc("NotoSansJP-VF") {
  source = "Sans/Variable/TTF/Subset/NotoSansJP-VF.ttf"
  module_install_dir = "fonts"
  subsystem_name = "thirdparty"
  part_name = "noto-cjk"
}

ohos_prebuilt_etc("NotoSansKR-VF") {
  source = "Sans/Variable/TTF/Subset/NotoSansKR-VF.ttf"
  module_install_dir = "fonts"
  subsystem_name = "thirdparty"
  part_name = "noto-cjk"
}

group("fonts_notocjk") {
  deps = [
    ":NotoSansJP-VF",
    ":NotoSansKR-VF",
  ]
}
